# fantano-fetcher

./: .env.local  .gitignore  LICENSE  README.md  decisions.md  drizzle.config.ts  fantano.db  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
api/: _db.py  _hf.py  _yt.py  example.ts  poll.py  python.py
app/: globals.css  layout.tsx  page.tsx
app/api/: route.ts
app/table/: page.tsx
app/tasks/: page.tsx
components/: ReviewsTable.tsx  columns.tsx  data-table-faceted-filter.tsx  data-table-toolbar.tsx  data-table.tsx  nav-bar.tsx
db/: index.ts  queries.ts  reviews.json  schema.ts  seed.ts
drizzle/: 0000_funny_marten_broadcloak.sql  0000_goofy_albert_cleary.sql  0001_dashing_blue_marvel.sql  0002_tense_maginty.sql
ml/: db.ipynb  db_new.ipynb  descriptions.py  ds150.py  fast.ipynb  new_data.ipynb  notebook.ipynb  pyproject.toml  videos.py
notebooks/: Makefile  auto.ipynb  db.ipynb  db_new.ipynb  descriptions.jsonl  descriptions_after_2023-06-24.jsonl  descriptions_clean.jsonl  descriptions_clean_after_2023-06-24.jsonl  descriptions_db_ready.jsonl  descriptions_db_ready_after_2023-06-24.jsonl  environment.yml  ff.db  hugging_pics.ipynb  image.py  labels.csv  new_data.ipynb  new_data.py  new_descriptions.jsonl  new_descriptions_clean.jsonl  new_descriptions_db_ready.jsonl  pyproject.toml  pytorch.ipynb  resnet34.py  sort_thumbnails.py  thumbnails.py  train.py  transformers.ipynb
scripts/: descriptions.jsonl  descriptions.py  label.py  thumbnail.py  thumbnails.py  videos.csv
(+18 files in other folders)
