[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Ryan Miville <rmiville@securityscorecard.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
torch = "^2.0.1"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
