[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Ryan Miville <ryanmiville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
transformers = "^4.29.2"
pytorch-lightning = "^2.0.2"
accelerate = "^0.19.0"
datasets = "^2.12.0"
evaluate = "^0.4.0"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
fastai = "^2.7.12"

[tool.poetry.extras]
datasets = ["vision"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
